Added audio functionality

--- a/TranslationJP/TranslationJP/Info.plist
+++ b/TranslationJP/TranslationJP/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>OPENAI_API_KEY</key>
 	<string>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</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need to access your speech to convert text into audio.</string>
 	<key>UILaunchScreen</key>
 	<dict/>
 </dict>
